# shower-timer-embedded-rp2040

./: Cargo.toml  README.md  op2.uf2
.cargo/: config.toml
src/: main.rs
